# gcleaner

./: AUTHORS  CMakeLists.txt  INSTALL  README.md
src/: Constants.vala  GCleaner.vala  gcleaner
src/Plugins/: plugin-chrome.vala  plugin-docsrecent.vala  plugin-firefox.vala  plugin-flash.vala  plugin-midori.vala  plugin-packages.vala  plugin-trash.vala
src/Widgets/: About.vala  Headerbar.vala  Sidebar.vala  Toolbar.vala
